[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Other/Shadow8x8.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Baby Boxer/idle.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hitboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/BabyBoxer/BabyBoxer.gd" type="Script" id=7]
[ext_resource path="res://Assets/Enemies/Baby Boxer/hide.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/Baby Boxer/poke.png" type="Texture" id=9]
[ext_resource path="res://Assets/SFX/Mixkit/mixkit-quick-knife-slice-cutting-2152.wav" type="AudioStream" id=10]
[ext_resource path="res://SFX/InsectDeathSFX.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "poke"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.0

[sub_resource type="CircleShape2D" id=6]
radius = 242.008

[sub_resource type="CircleShape2D" id=7]
radius = 6.0

[sub_resource type="CircleShape2D" id=8]
radius = 178.045

[sub_resource type="CircleShape2D" id=9]
radius = 68.2642

[node name="BabyBoxer" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
offset = Vector2( 0, -32 )
hframes = 7
frame = 6

[node name="Shadow" type="Sprite" parent="Sprite"]
self_modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( 0, -2 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/hide = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/poke = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 5 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
self_modulate = Color( 0.615686, 0.807843, 0.137255, 0.352941 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -24 )
shape = SubResource( 7 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 6 )]

[node name="DisabledHitboxTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetectionForHide" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionForHide"]
self_modulate = Color( 0.647059, 0.203922, 0.203922, 1 )
shape = SubResource( 8 )

[node name="PlayerDetectionForPoke" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionForPoke"]
shape = SubResource( 9 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="InsectDeathSFX" parent="." instance=ExtResource( 11 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionForHide" to="." method="_on_PlayerDetectionForHide_body_entered"]
[connection signal="body_exited" from="PlayerDetectionForHide" to="." method="_on_PlayerDetectionForHide_body_exited"]
[connection signal="body_entered" from="PlayerDetectionForPoke" to="." method="_on_PlayerDetectionForPoke_body_entered"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
